--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header {
   position: fixed;
   top: 0;
   min-height: 75px;
-  padding: 0px 20px;
+  padding: 0 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -46,7 +46,7 @@ header {
 #pricing {
   margin-top: 50px;
   text-align: center;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
 
 nav > ul {
